[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0", "wheel"]

[project]
authors = [
  {name = "Jorge Juarez", email = "jorgeang33@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Customer Service",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License", # "Topic :: Documentation :: Sphinx"
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests>=2.32.3",
  "colorlog>=6.8.2",
]
description = "A package to wrap the Messenger API"
keywords = ["Messenger", "wrapper", "Meta", "API", "Facebook", "Pynani", "PyMessenger"]
license = {file = "LICENSE"}
name = "pynani"
readme = "README.md"
requires-python = ">=3.10"
version = "1.3.1"

[project.urls]
"Bug Tracker" = "https://github.com/jorge-jrzz/Pynani/issues"
Repository = "https://github.com/jorge-jrzz/Pynani"
